--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Newsletter Popup</title>
     </head>
     <body>
-        <div class="container">
+        <main class="container">
             <div class="container1">
                 <h1>Creating email templates has never been easier.</h1>
             </div>
@@ -29,6 +29,6 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </main>
     </body>
 </html>
