email input add aria-label

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="container2">
                 <p class="description">Receive daily emails on how the best create email templates, completely free.</p>
                 <form>
-                    <input type="email" name="email" id="email" required placeholder="Email Address">
+                    <input type="email" name="email" id="email" required placeholder="Email Address" aria-label="Email Address">
                     <input type="submit" id="button" value="Subscribe">
                 </form>
                 <p class="spam">No spam, ever. Unsubscribe anytime.</p>
