img delete unnecessary alt text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p class="spam">No spam, ever. Unsubscribe anytime.</p>
                 <div class="avatar">
                     <div class="avatar_name">
-                        <img src="Assets/User Avatar.svg" alt="User's profile picture." class="avatar">
+                        <img src="Assets/User Avatar.svg" alt="" class="avatar">
                         <div class="nametitle">
                             <p class="name">Andrew Vickins</p>
                             <p class="title">Newsletter Designer</p>
