--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <main class="container">
-            <div class="container1">
+            <header class="container1">
                 <h1>Creating email templates has never been easier.</h1>
-            </div>
+            </header>
             <div class="container2">
                 <p class="description">Receive daily emails on how the best create email templates, completely free.</p>
                 <form>
